recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:2: error: Missing closing brace `}' assumed here
def snowSquare (levels:Int, length:Double) {
^SquareKoch:15: error: expected class or object definition
def squareSide(levels:Int, length:Double) {
^